# DWaveDynamics

./: README.md  chimera3.tex  pyproject.toml  qpu_graph_4.1.txt
data/: pegasus_2_0.json  pegasus_2_1.json  pegasus_2_2.json  pegasus_2_3.json  pegasus_2_4.json  pegasus_3_0.json  pegasus_3_1.json  pegasus_3_2.json  pegasus_3_3.json  pegasus_3_4.json  pegasus_4_0.json  pegasus_4_1.json  pegasus_4_2.json  pegasus_4_3.json  pegasus_4_4.json  time.json  zephyr_2_0.json  zephyr_2_1.json  zephyr_2_2.json  zephyr_2_3.json  zephyr_2_4.json  zephyr_3_0.json  zephyr_3_1.json  zephyr_3_2.json  zephyr_3_3.json  zephyr_3_4.json  zephyr_4_0.json  zephyr_4_1.json  zephyr_4_2.json  zephyr_4_3.json  zephyr_4_4.json
data/basic/: pegasus_2_0.json  pegasus_2_1.json  pegasus_2_2.json  pegasus_2_3.json  pegasus_2_4.json
data/instances/: 11.pckl  12.pckl  13.pckl  14.pckl  15.pckl  16.pckl  2.pckl  3.pckl  4.pckl  5.pckl  6.pckl  8.pckl  9.pckl
data/instances/hessian/10/: precision_2_timepoints_10.json  (+4 more)
notebooks/: 01 - Full Workflow (Rebit).ipynb  02 - Full Workflow (Qubit).ipynb  Entanglement_SD.py  approx.ipynb  plots.ipynb  pt-symmetric.py  ptsymmetric.ipynb  ptsymmetric.py  reverse_eng.ipynb  schroedinger.ipynb  tests.ipynb  velox_instances.ipynb  verfication.ipynb
plots/: p.tex  zephyr.tex
scripts/: dwave_test.py  precision_test.py  ptsymmetric.py  random_matrix_test.py  random_matrix_test_copy.py  verify_solutions.py
src/dwdynamics/: clock.py  draw_utils.py  fixed_point.py  helpers.py  instance.py  operators.py  problems.py  qubo.py
velox/results/: best_results_pruned_1.csv
(+830 files in other folders)
