[tool.poetry]
name = "dwdynamics"
version = "0.1.0"
description = ""
authors = ["Konrad Jałowiecki <dexter2206@gmail.com>"]
readme = "README.md"
packages = [{include = "dwdynamics", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
dimod = "^0.12.17"
qutip = "^5.0.4"
jupyter = {version = "^1.1.1", optional = true}
matplotlib = {version = "^3.9.2", optional = true}
dwave-system = "^1.27.0"

[tool.poetry.extras]
notebooks = ["jupyter", "matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
